# src/main/resources/openapi.yml
@@ -289,6 +289,54 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestError'
   /owners/{ownerId}/pets:
+    get:
+      tags:
+        - pet
+      operationId: listOwnersPets
+      summary: Get the pets of the owner
+      description: Get the current pets of the owner.
+      parameters:
+        - name: ownerId
+          in: path
+          description: The ID of the pet owner.
+          required: true
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            example: 1
+      responses:
+        200:
+          description: The owner's pets.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        404:
+          description: Pet not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestError'
     post:
       tags:
         - pet
